Replace project icons in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-icon">
-                        <i class="fa-solid fa-calculator"></i>
+                        <i class="fa-solid fa-traffic-light"></i>
                     </div>
                     
                     <div class="project-info">
@@ -103,7 +103,7 @@
 
                 <div class="project-card">
                     <div class="project-icon">
-                        <i class="fa-solid fa-cloud-sun"></i>
+                        <i class="fa-solid fa-hands"></i>
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">AI Sign Language Interpreter</h3>
